# FreeTrace_cpp

./: .gitignore  CMakeLists.txt  DEVLOG_2026-03-13.md  README.md  compare_loc.py  compare_loc_tight.py  compare_traces.py  debug_gmm.py  gen_ext_imgs.py  gui.py  gui.spec  gui_macos.spec  run_compare_jump10.sh  run_nn_comparison.py  run_nn_comparison_onnx.py  test_nn_compare.py  test_tracking_steps.py
.github/workflows/: release.yml
include/: cost_function.h  gpu_module.h  image_pad.h  localization.h  nn_coreml.h  nn_inference.h  regression.h  tracking.h
installer/: build_installer.bat  build_installer_rtx5000.bat  build_macos_dmg.sh  freetrace_installer.iss  freetrace_installer_rtx5000.iss
models/: reg_k_model.onnx
models/reg_model_3.mlpackage/: Manifest.json
models/reg_model_3.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/reg_model_5.mlpackage/: Manifest.json
models/reg_model_5.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/reg_model_8.mlpackage/: Manifest.json
models/reg_model_8.mlpackage/Data/com.apple.CoreML/: model.mlmodel
python/: cauchy_fit.py  cauchy_neff_cov_H0125.npz  cauchy_neff_cov_H0250.npz  cauchy_neff_cov_H0375.npz  cauchy_neff_cov_H0500.npz  cauchy_neff_cov_H0625.npz  cauchy_neff_cov_H0875.npz  cauchy_neff_cov_H750.npz
scripts/: convert_to_coreml.py  download_models.py
src/: cost_function.cpp  gpu_module.cu  gpu_module_stub.cpp  image_pad.cpp  localization.cpp  main.cpp  nn_coreml.mm  nn_inference.cpp  nn_inference_stub.cpp  regression.cpp  test_nn_compare.cpp  tracking.cpp
